deploy/kubernetes/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller
  labels:
    app.kubernetes.io/name: controller
    app.kubernetes.io/part-of: egressdeck
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: controller
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
